# whis

./: .gitignore  README.md  clips_settings_view.py  com.github.hezral.hello.yml  com.github.hezral.whis.yml  meson.build  prototype.mov
.github/workflows/: main.yml
data/: application.css  com.github.hezral.hello.appdata.xml.in  com.github.hezral.hello.desktop.in  com.github.hezral.hello.gschema.xml  com.github.hezral.whis.appdata.xml.in  com.github.hezral.whis.desktop.in  com.github.hezral.whis.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: config_manager.py  hello.in  logging_utils.py  main.py  meson.build  mode_switch.py  preferences.py  prototype_ui.py  whis.in  window.py
